HL7: properties now using Camel standards and adding name conventions for directory properties

--- a/iDaaS-Connect-HL7/src/main/resources/application.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application.properties
@@ -26,48 +26,49 @@ idaas.processPublicCloud=true
 idaas.cloudAPI=urlendpoint
 # HL7 Specific properties
 # ADT
-idaas.hl7ADT_Directory=/data-input/hl7/adt
+idaas.hl7.adt.dir=/data-input/hl7/adt
 idaas.adtPort=10001
 idaas.adtACKResponse=true
 idaas.adtTopicName=mctn_mms_adt
 # ORM
-idaas.hl7ORM_Directory=data-input/hl7/orm
+idaas.hl7.orm.dir=data-input/hl7/orm
 idaas.ormPort=10002
 idaas.ormACKResponse=true
 # ORU
 idaas.ormTopicName=mctn_mms_orm
-idaas.hl7ORU_Directory=data-input/hl7/oru
+idaas.hl7.oru.dir=data-input/hl7/oru
 idaas.oruPort=10003
 idaas.oruACKResponse=true
 idaas.oruTopicName=mctn_mms_oru
 # RDE
-idaas.hl7RDE_Directory=data-input/hl7/rde
+idaas.hl7.rde.dir=data-input/hl7/rde
 idaas.rdePort=10004
 idaas.rdeACKResponse=true
 idaas.rdeTopicName=mctn_mms_rde
 # MFN
-idaas.hl7MFN_Directory=data-input/hl7/mfn
+idaas.hl7.mfn.dir=data-input/hl7/mfn
 idaas.mfnPort=10005
 idaas.mfnACKResponse=true
 idaas.mfnTopicName=mctn_mms_mfn
 # MDM
-idaas.hl7MDM_Directory=data-input/hl7/mdm
+idaas.hl7.mdm.dir=data-input/hl7/mdm
 idaas.mdmPort=10006
 idaas.mdmACKResponse=true
 idaas.mdmTopicName=mctn_mms_mdm
 # SCH
-idaas.hl7SCH_Directory=data-input/hl7/sch
+idaas.hl7.sch.dir=data-input/hl7/sch
 idaas.schPort=10007
 idaas.schACKResponse=true
 idaas.schTopicName=mctn_mms_sch
 # VXU
-idaas.hl7VXU_Directory=data-input/hl7/vxu
+idaas.hl7.vxu.dir=data-input/hl7/vxu
 idaas.vxuPort=10008
 idaas.vxuACKResponse=true
 idaas.vxuTopicName=mctn_mms_vxu
 # CCDA
-idaas.hl7ccda_Directory=data-input/ccda
+idaas.hl7.ccda.dir=data-input/ccda
 idaas.ccdaTopicName=mctn_mms_ccda
+
 # HL7 over HTTP
 idaas.hl7HTTPTopicName=mctn_mms_hl7http
 # Other Settings
