ThirdParty: properties normalized

--- a/iDaaS-Connect-ThirdParty/src/main/resources/application.properties
+++ b/iDaaS-Connect-ThirdParty/src/main/resources/application.properties
@@ -15,14 +15,14 @@ server.port=9983
 # Management App Server Address
 server.address=0.0.0.0
 management.address=0.0.0.0
-idaas.kafkaBrokers=localhost:9092
-idaas.integrationTopic=opsmgmt_platformtransactions
-idaas.appintegrationTopic=opsmgmt_platformappintgrtn
-idaas.iotintegrationTopic=iot
+idaas.kafka.brokers=localhost:9092
+idaas.integration.topic=opsmgmt_platformtransactions
+idaas.app.integration.topic=opsmgmt_platformappintgrtn
+idaas.iot.integration.topic=iot
 # Public Cloud
-idaas.cloudTopic=idaas_cloud
-idaas.processPublicCloud=false
-idaas.cloudAPI=urlendpoint
+idaas.cloud.topic=idaas_cloud
+idaas.process.public-cloud=false
+idaas.cloud.api=urlendpoint
 # JDBC Database
 spring.datasource.url=jdbc:postgresql://localhost/:5432/idaas_thirdparty
 spring.datasource.username=postgres
